--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.game-board {
+    width: 100%;
+    height: 500px;
+    border-bottom: 15px solid green;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient();
+}
+
+.pipe {
+  position:
+
+    width: 80px;
+  animation: pipe-animation 1.
