--- a/style.css
+++ b/style.css
@@ -15,7 +15,23 @@
 }
 
 .pipe {
-  position:
-
+    position: absolute;
+    botton: 0;
     width: 80px;
-  animation: pipe-animation 1.
+    animation: pipe-animation 1.5s infinite linear;
+}
+
+.mario {
+    width: 150px;
+    position: absolute;
+    botton: 0;
+}
+
+.jump {
+    animation: jump 500ms ease-out;
+}
+
+.nuvem {
+    posittion: absolute;
+    width: 550px;
+    animation: clouds-animation 20s infinite linear;
