--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-'* {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,12 +11,12 @@
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(#e54545);
+    background: linear-gradient();
 }
 
 .pipe {
     position: absolute;
-    botton: 0;
+    bottom: 0;
     width: 80px;
     animation: pipe-animation 1.5s infinite linear;
 }
@@ -24,7 +24,7 @@
 .mario {
     width: 150px;
     position: absolute;
-    botton: 0;
+    bottom: 0;
 }
 
 .jump {
@@ -32,43 +32,47 @@
 }
 
 .nuvem {
-    posittion: absolute;
+    position: absolute;
     width: 550px;
     animation: clouds-animation 20s infinite linear;
 }
 
-@KeyFrames pipe-animation {
+@keyframes piper-animation {
     from {
-        rigth: -80px;
-}  
+        right: -80px;
+    }
     to {
-       rigth: 100%;
-}
-    
-@keyframes jump {
-    0% {
-        botton: 0;
-    }
-    
-    40%{
-        botton: 180px;
-    }
-
-    50% {
-        botton: 180px;
-    }
-
-    100% {
-        botton: 0;
+        right: 100%;
     }
 }
+
+@keyframes .jump {
+    0%
+    bottom: 0;
+}
+
+40% {
+    bottom: 180px;
+}
+
+50% {
+    bottom: 180px;
+}
+
+60% {
+    bottom: 180px;
+}
+
+100% {
+    bottom: 0;
+}
+
 @keyframes clouds-animation {
-    from{
-        rigth :100%
+    from {
+        right: -550px;
     }
-} {
     
-}
-
-
+    to {
+        right: 100%;
+    }
 }
