--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
 }
 
-.game-board {
+.game-board{
     width: 100%;
-    height: 500px;
+    height: 100vh;
     border-bottom: 15px solid green;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    background: linear-gradient();
+    background: linear-gradient(#87ceeb, #e0f6ff);
 }
 
 .pipe {
@@ -37,7 +37,51 @@
     animation: clouds-animation 20s infinite linear;
 }
 
-@keyframes piper-animation {
+button {
+    background: green;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    padding: 1rem;
+    position: absolute;
+    right: 50vw;
+    top: 50vh;
+    cursor: pointer;
+    z-index: 1;
+}
+
+button:hover {
+    border: 2px;
+    background: none;
+    color: green;
+}
+
+button.start {
+    display: block;
+}
+
+.game-over {
+    width: 100%;
+    height: 100vh;
+    background: red;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+game-over h1 {
+    font-size: 3rem;
+    color: red;
+    text-align: center;
+    margin-top: 15rem;
+}
+
+@keyframes pipe-animation {
     from {
         right: -80px;
     }
@@ -46,32 +90,33 @@
     }
 }
 
-@keyframes .jump {
-    0%
-    bottom: 0;
-}
+@keyframes jump {
+    0% {
+        bottom: 0;
+    }
 
-40% {
-    bottom: 180px;
-}
+    40% {
+        bottom: 180px;
+    }
 
-50% {
-    bottom: 180px;
-}
+    50% {
+        bottom: 180px;
+    }
 
-60% {
-    bottom: 180px;
-}
+    60% {
+        bottom: 180px;
+    }
 
-100% {
-    bottom: 0;
+    100% {
+        bottom: 0;
+    }
 }
 
 @keyframes clouds-animation {
     from {
         right: -550px;
     }
-    
+
     to {
         right: 100%;
     }
