--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ display: block;
 .score {
     position: absolute;
     top: 10px;
-    rigth: 10px;
+    right: 10px;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 24px;
@@ -78,7 +78,7 @@ display: block;
 }
 
 .score span {
-    font-weigth: bold;
+    font-weight: bold;
     font-size: 30px;
 }
 
